--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <script src ="depend/p5.dom.js"></script>
         <script src ="depend/p5.js"></script>
+        <script src ="depend/p5.dom.js"></script>
+        <script src ="point.js"></script>
+        <script src ="ray.js"></script>
         <script src ="index.js"></script>
     </body>
 </html>
