Basic ray casting has been added

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html>
     <body>
         <script src ="depend/p5.js"></script>
-        <script src ="depend/p5.dom.js"></script>
-        <script src ="point.js"></script>
-        <script src ="ray.js"></script>
+        <script src ="depend/p5.dom.js"></script>   
+        <script src ="Border.js"></script>
+        <script src ="Ray.js"></script>
+        <script src ="Point.js"></script>
         <script src ="index.js"></script>
     </body>
 </html>
